HighContrast: Correctly select window decoration
We need

    .window-classes decoration

but within the decoration parent selector, we were doing
&.window-classes, which gave us

    decoration.window classes

We need to fix this by selecting on .window-classes &

https://bugzilla.gnome.org/show_bug.cgi?id=788496

--- a/gtk/theme/HighContrast/gtk-contained-inverse.css
+++ b/gtk/theme/HighContrast/gtk-contained-inverse.css
@@ -1467,13 +1467,13 @@ decoration { border-radius: 7px 7px 0 0; border-width: 0px; box-shadow: 0 3px 9p
 
 decoration:backdrop { box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.2), 0 3px 9px 1px transparent, 0 0 0 1px rgba(0, 0, 0, 0.18); }
 
-decoration.tiled { border-radius: 0; }
+.tiled decoration { border-radius: 0; }
 
-decoration.csd.popup { border-radius: 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.13); }
+.csd.popup decoration { border-radius: 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.13); }
 
-decoration.csd.tooltip { border-radius: 5px; box-shadow: none; }
+.tooltip decoration { border-radius: 5px; box-shadow: none; }
 
-decoration.solid-csd { border-radius: 0; margin: 4px; background-color: #000; border: solid 1px #737373; box-shadow: none; }
+.solid-csd decoration { border-radius: 0; margin: 4px; background-color: #000; border: solid 1px #737373; box-shadow: none; }
 
 /********************** Touch Copy & Paste * */
 cursor-handle { background-color: #000; background-image: none; -gtk-icon-source: none; box-shadow: none; outline-style: none; outline-color: transparent; border: 2px solid #fff; }
